<resources>
    <string name="app_name">Muslim Pre</string>
    <string name="action_settings">Settings</string>
    <string name="time_for">Time for %s prayer</string>
    <string name="time_in">In %s at %s</string>
    <string name="time_up">It is %s time since </string>
    <string name="time_to_next">Next prayer in </string>
    <string name="time_interval">%2d h, %2d m and %2d s</string>
    <string name="time_interval_rounded">%2d h and %2d m</string>
    <string name="time_interval_0h">%2d m and %2d s</string>
    <string name="time_interval_0h_rounded">%2d m</string>
    <string name="stop_athan">Stop Athan</string>
    <string name="close_notification">Close</string>
    <string name="set_location">Tap here to set location</string>
    <string name="zero_hour">00:00</string>
    <string name="square">\u25A0</string>
    <string name="notifications">التنبيهات</string>
    <string name="mt_val">μT</string>
    <string name="mag_field">mag.field</string>
    <string name="n">N</string>
    <string name="e">E</string>
    <string name="s">S</string>
    <string name="w">W</string>
    <string name="ne">NE</string>
    <string name="se">SE</string>
    <string name="sw">SW</string>
    <string name="nw">NW</string>
    <string name="magnetic_field2">Magnetic field: %1$d %2$s</string>
    <string name="accuracy">accuracy</string>
    <string name="accuracy3">Accuracy: %s</string>
    <string name="about_us">Ever wanted to motivation in your life ? If yes, then this app will help you to get motivated at every point of your life with it largest collection of best Islamic Utilities.</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="error">Error</string>
    <string name="unable_to_init_sensor">Unable to initialize sensors for Compass.</string>
    <string name="btn_ok">OK</string>
    <string name="acceleration">acceleration</string>
    <string name="orientation">orientation</string>
    <string name="wind_meager">m/s</string>
    <string name="accuracy_unreliable">unreliable</string>
    <string name="accuracy_low">low</string>
    <string name="accuracy_medium">medium</string>
    <string name="accuracy_high">high</string>
    <string name="need_calibration">The compass needs to be calibrated.\n Rotate the phone repeating figure eight until the calibration is complete.</string>
    <string name="fajrar">الفجر</string>
    <string name="dhuhrar">الظهر</string>
    <string name="asrar">العصر</string>
    <string name="maghribar">المغرب</string>
    <string name="ishaar">العشاء</string>
    <string name="fajr">Fajr</string>
    <string name="shuruk">Sunset</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="jumu3a">Jumuaa</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="nextfajr">Next fajr</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_language">Language</string>
    <string-array name="pref_language_list_titles">
        <item>Follow device settings</item>
        <item>Arabic</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>--</item>
        <item>ar</item>
        <item>en</item>
    </string-array>
    <string name="pref_language_default_value">--</string>
    <string name="pref_title_numerals">Numerals</string>
    <string-array name="pref_numerals_list_titles">
        <item>Follow location</item>
        <item>Arabic</item>
        <item>Arabic Eastern</item>
    </string-array>
    <string-array name="pref_numerals_list_values">
        <item>CC</item>
        <item>DZ</item>
        <item>EG</item>
    </string-array>
    <string name="pref_numerals_default_value">CC</string>
    <string name="pref_title_about">About</string>
    <string name="pref_txt_about">
Test about
    </string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_prayer_time">Prayer time</string>
    <string name="pref_title_athan">Athan</string>
    <string name="pref_title_muezzin">Muezzin</string>
    <string-array name="pref_muezzin_list_titles">
        <item>Abdulbaset Abdesamad (Egypt)</item>
        <item>Ali Mullah (Mecca)</item>
        <item>Naser Alqatami (Al-Riyadh)</item>
        <item>Abdulmajeed Aserehy (Al-Madinah)</item>
        <item>İsmail Coşar (Turkey)</item>
        <item>Kefah Issa (Palestine)</item>
        <item>Riad Aït-Hamou (Algeria)</item>
    </string-array>
    <string-array name="pref_muezzin_list_values">
        <item>ABDELBASET</item>
        <item>ALIMULLA</item>
        <item>ALQATAMI</item>
        <item>ASEREHY</item>
        <item>JOSHAR</item>
        <item>KEFAH</item>
        <item>RIAD</item>
    </string-array>
    <string name="select_muezzin">Select muezzin %1$s?</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="search_city">Search city</string>
    <string name="pref_header_locations">Location</string>
    <string name="pref_title_search_city">City</string>
    <string name="pref_undefined_city">Undefined</string>
    <string name="pref_title_method">Calculation method</string>
    <string-array name="pref_method_list_titles">
        <item>Muslim World League</item>
        <item>Egyptian Survey Authority</item>
        <item>Umm Al-Qurra University</item>
        <item>Karachi Univ. of Islamic Sciences</item>
        <item>Islamic Society of North America</item>
        <item>Union of Islamic Org. in France</item>
        <item>Kuwait Ministry of Awqaf</item>
    </string-array>
    <string-array name="pref_method_list_values">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
    <string name="pref_title_mathhab_hanafi">Mathhab Hanafi</string>
    <string name="pref_description_mathhab_hanafi">Follow Mathhab Hanafi for Asr time</string>
    <string name="internetfirst">Internet required</string>
    <string name="pref_title_round">Rounding seconds</string>
    <string name="nissab">Imposter: </string>
    <string name="goldsilver">To measure the price of gold or silver that you own for more than a year, you must calculate its price per 10 grams in your local currency. Each type of gold that you own must be added (according to karat) separately due to the difference in their value.</string>
    <string name="nissabinfo">According to Sharia law, the nisab is the minimum amount that a person has for more than a year to be obligated to pay zakat. You can calculate the nisab value in terms of the value of gold or silver. For silver, the nisab is 21 ounces of silver (653.17 grams) or the money equivalent. For gold, the nisab is 3 ounces (85.05 grams) of gold or the money equivalent.</string>
    <string name="zakatfitr">There is another type of zakat that Muslims are obligated to pay zakat al-Fitr. This name is given in Islam for alms that are distributed near the end of Ramadan. The value of Zakat Al-Fitr is the same for all people, regardless of their different income. The minimum for zakat is one saa \'(two handfuls) of food, grains, or dried fruit for each family member.</string>
    <string name="zakatcalcul">Enter the value of the money you want to take out your Zakat to get the result using the Zakat Calculator</string>
    <string name="menu_zakat">Zakat</string>
    <string name="totalprice">Total Price</string>
    <string name="goldprice">Gold Price</string>
    <string name="calculate">Calculate</string>
    <string name="zakatprice">Zakat Price</string>
    <string name="nozakat">No Zakat</string>
    <string name="localprice">Local Price</string>
    <string name="localgoldprice"><u>Local Gold Price</u></string>
    <string name="zakathowto">Zakat calculation method</string>
    <string name="stepone">The first step :</string>
    <string name="steptwo">The second step :</string>
    <string name="stepthree">The third step :</string>
    <string name="steponedetail">Add the value of money, real estate and wealth that you have owned for more than a year while subtracting the amount of debts you must pay and the obligations that must be paid.</string>
    <string name="steptwodetail">Check again the gold\'s value in your local currency</string>
    <string name="stepthreedetail">Click on the Calculate your Zakat button, a summary will be issued that tells you whether you are obligated to pay the zakat or not, if you are obligated to pay, the amount to be paid for Zakat will be clear. This value is 2.5% of all your holdings.</string>
    <string name="info">Information: </string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>
    <string name="get_updates">Get Update</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="default_notification_channel_id">default</string>
    <string name="go_to_geo_fencing">Geo-Fencing</string>
    <string name="go_to_fetch_location_in_fore_ground">Fetch Location in Foreground</string>
    <string name="go_to_fetch_location_in_back_ground">Fetch Location in Background</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="radius_in_meter">Radius in meters</string>
    <string name="set_geo_fence">Set Geo-Fence</string>
    <string name="valid_latitude">Enter valid latitude value</string>
    <string name="valid_longitude">Enter valid longitude value</string>
    <string name="default_radius_is_set_as_100_meter_for_geo_fencing">Default radius is set as 100 meter for Geo-fencing</string>
    <string name="geo_fencing_added_successfully">Geo-fencing added successfully</string>
    <string name="geo_fencing_removed_successfully">Geo-fencing removed successfully</string>
    <string name="geo_fencing_add_failed">Geo-fencing add failed</string>
    <string name="geo_fencing_remove_failed">Geo-fencing remove failed</string>
    <string name="errorloadprayertimes">Faulty renewal of prayer times</string>
    <string name="loadingprayertimes">Renewing prayer times ...</string>
    <string name="prayertimesloaded">Prayer times have been updated</string>
    <string name="menu_fadl1">إنَّ من أفضل الأعمال الصالحة اليسيرة التي تقرب المسلم إلى ربه جل وعلا الذكرُ.</string>
    <string name="menu_fadl2">بعض الآيات والأحاديث في فضل الذكر والدعاء والحث عليها :</string>
    <string name="menu_fadlGod1">قال تعالى :</string>
    <string name="menu_fadlGod2">و قال تعالى :</string>
    <string name="menu_fadlProphet">و قال رَسُولُ اللَّهِ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّم َ:</string>
    <string name="ProphetSaid"> قال رَسُولُ اللَّهِ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّم َ:</string>
    <string name="thought1">"وَلَذِكْرُ اللَّهِ أَكْبَرُ".</string>
    <string name="thought2">"وَسَبِّحُوهُ بُكْرَةً وَأَصِيلًا".</string>
    <string name="thought3">"فَاذْكُرُونِي أَذْكُرْكُمْ وَاشْكُرُوا لِي وَلا تَكْفُرُونِ".</string>
    <string name="thought4">"يَا أَيُّهَا الَّذِينَ آمَنُوا اذْكُرُوا اللَّهَ ذِكْراً كَثِيراً".</string>
    <string name="thought5"> "وَالذَّاكِرِينَ اللَّهَ كَثِيراً وَالذَّاكِرَاتِ أَعَدَّ اللَّهُ لَهُمْ مَغْفِرَةً وَأَجْراً عَظِيماً".</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="tohijri">To Hijri</string>
    <string name="togregorian">To Gregorian</string>
    <string name="dayw">Day of Week</string>
    <string name="convert"> Convert</string>
    <string name="restore"> Restore</string>
    <string name="clear">Clear</string>
    <string name="note">*There is a small probability of one day error</string>
        <string name="banner_adunit_id">ca-app-pub-2745612976468765/8833924361</string>
</resources>